styles/style.css
/* ... */
body {
  background: var(--clr-light);
  color: var(--clr-dark);
  margin: 0;
  font-family: var(--ff-primary);
  font-size: var(--fs-body);
  line-height: 1.6;
  overflow-x: hidden;
}

img {
  display: block;
  max-width: 100%;
}

strong {
  font-weight: var(--fw-bold);
}

:focus {
  outline: 3px solid var(--clr-accent);
  outline-offset: 3px;
}

.btn {
  display: inline-block;
  padding: 0.5em 2.5em;
  margin: 0 auto;
  background: var(--clr-accent);
  color: var(--clr-dark);
  text-decoration: none;
  cursor: pointer;
  font-size: var(--fs-body);
  text-transform: uppercase;
  letter-spacing: 2px;
  font-weight: var(--fw-bold);
  transition: transform 200ms ease-in-out;
}

.btn-sm {
  padding: 0.5em 1em;
  margin: 1em;
  font-size: var(--ff-secondary);
  text-transform: uppercase;
  transition: transform 200ms ease-in-out;
}

.btn__home {
  margin-top: 5rem;
  margin-bottom: 0px;
}

.btn:hover {
  transform: scale(1.1);
}

section {
  position: relative;
  padding: 5em 2em;
}

/* ##################################################### TYPOGRAPHY */

h1,
h2,
h3 {
  line-height: 1.1;
  margin: 0;
}

h1 {
  font-size: var(--fs-h1);
}
h2 {
  font-size: var(--fs-h2);
}
h3 {
  font-size: var(--fs-h3);
}

/* ##################################################### TITLES */
.section__title {
  margin-bottom: 0.25em;
}

.section__title--intro {
  font-weight: var(--fw-reg);
}

.section__title--intro strong {
  display: block;
}

/* SUBTITLES */
.section__subtitle {
  margin: 0;
  font-size: var(--fs-h3);
}

.section__subtitle--intro-item,
.section__subtitle--intro,
.section__subtitle--about {
  background: var(--clr-accent);
  font-family: var(--ff-secondary);
  padding: 0.25em 1em;
  margin-bottom: 1em;
}

.section__subtitle--work {
  color: var(--clr-accent);
  font-weight: var(--fw-bold);
  margin-bottom: 2em;
}

/* ##################################################### HEADER  */

header {
  display: flex;
  justify-content: space-between;
  padding: 1em;
}

.logo {
  max-width: 122px;
  position: fixed;
  background-color: var(--clr-light);
  padding: 5px 0;
  z-index: 4;
}

.nav {
  position: fixed;
  background: var(--clr-dark);
  color: var(--clr-light);
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 11; /* nav elements are 11 and above z-index, above 
  all stylistic stuff, above images, above backgrounds (obv) */

  transform: translateX(100%);
  transition: transform 250ms cubic-bezier(0.5, 0, 0.5, 1);
}

.nav-toggle {
  cursor: pointer;
  background: transparent;
  position: fixed;
  border: 0;
  padding: 0.5em;
  right: 1em;
  top: 1em; /* distance based on padding supplied */
  z-index: 12; /* hamburger is top top top, above nav slightly */
}

.nav__list {
  list-style: none;
  display: flex;
  height: 100%;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  margin: 0;
  padding: 0;
}

.nav__link {
  color: inherit;
  font-weight: var(--fw-bold);
  font-size: var(--fs-h2);
  text-decoration: none;
}

.nav__link:hover {
  color: var(--clr-accent);
}

.nav-open .nav {
  transform: translateX(0%);
}

.nav-open .nav-toggle {
  position: fixed;
}

.hamburger {
  display: block;
  position: relative;
}

.hamburger,
.hamburger::before,
.hamburger::after {
  background: var(--clr-accent);
  width: 30px;
  height: 2.5px;
  transition: transform 150ms ease-in-out;
}
.hamburger::before,
.hamburger::after {
  position: absolute;
  content: "";
  /* because our .hamburger is position:relative this left 0 right 0 
  is relative to .hamburgers position, rather than going across the entire screen */
  left: 0;
  right: 0;
}
.hamburger::before {
  top: 6px;
}
.hamburger::after {
  bottom: 6px;
}

.nav-open .hamburger {
  transform: rotate(315deg);
}
.nav-open .hamburger::before {
  transform: rotate(90deg) translateX(-6px); 
  /* that 6px is because thats what the hamburger 'bun' is offset by */
}
.nav-open .hamburger::after {
  opacity: 0;
}

/* ##################################################### INTRO SECTIONS */

.intro {
  position: relative;
  display: grid;
  margin: 0 auto; /* 0 auto ||  25vh auto 25vh auto */
  grid-column-gap: .5em;
  grid-template-columns: 6fr 1fr;
  grid-template-areas:
    "title subtitle"
    "img subtitle";
  padding-top: 3em;
  z-index: 1;
}

.intro-item {
  position: relative;
  display: grid;
  margin: 0 auto; /* 0 auto ||  25vh auto 25vh auto */
  grid-column-gap: .5em;
  grid-template-areas:
    "title"
    "subtitle"
    "img ";
  padding-top: 3em;
  z-index: 1;
}

.hero {
  left: 0;
  right: 0;
}

.port-intro {
  position: relative;
}

.intro__img {
  filter: brightness(1.25) contrast(.75) 
    hue-rotate(15deg) saturate(0.9);
  box-shadow: var(--bs);
  grid-area: img;
}

.section__title--intro{
  grid-area: title;
}

.section__subtitle--intro {
  position: relative;
  writing-mode: vertical-rl;
  text-orientation: mixed;
  display: inline-block;
  text-align: right;
  margin-left: 5px;
  width: calc(100% - 1em);
  line-height: normal;
  grid-area: subtitle;
}

.section__subtitle--intro-item {
  position: relative;
  display: inline-block;
  margin-left: 5px;
  line-height: normal;
  grid-area: subtitle;
}

.line-break-size {
  display: none;
}
  
@media (min-width: 321px) {
  .section__subtitle--intro {
    left: .5em;
    width: calc(100% - 1em);
  }
}
/* ... */

